--- a/src/main/resources/public/views/record-add.html
+++ b/src/main/resources/public/views/record-add.html
@@ -1,5 +1,5 @@
 <div class="container pad-top">
-  <form class="form-horizontal" role="form" ng-submit="addRecord()">
+  <form name="userForm" class="form-horizontal" role="form" ng-submit="addRecord()" novalidate>
       <div ng-include="'views/_form.html'"></div>
   </form>
 </div>
