Add genres values / Update angular UI

--- a/src/main/resources/public/views/record-view.html
+++ b/src/main/resources/public/views/record-view.html
@@ -18,7 +18,7 @@
       </tr>
       <tr>
           <td>Genre</td>
-          <td>{{record.genre}}</td>
+          <td>{{genres[record.genre - 1].name}}</td>
       </tr>
       <tr>
           <td>Condition</td>
