--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -37,7 +37,11 @@
 <div class="form-group">
     <label for="genre" class="col-sm-2 control-label">Genre</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="record.genre" class="form-control" id="genre" placeholder="Genre" />
+        <!-- <input type="text" ng-model="record.genre" class="form-control" id="genre" placeholder="Genre" /> -->
+        <select ng-model="record.genre">
+        	<option value="">Select Genre</option>
+        	<option ng-repeat="genre in genres" value="{{genre.id}}">{{genre.name}}</option>
+        </select>
     </div>
 </div>
 <div class="form-group">
