Add a modal when deleting a record

--- a/src/main/resources/public/views/home.html
+++ b/src/main/resources/public/views/home.html
@@ -17,7 +17,5 @@
 
       <hr>
 
-      <footer>
-        <p>&copy; Geobas</p>
-      </footer>
+      <footer></footer>
     </div> <!-- /container -->
