Add condition values / Update angular UI

--- a/src/main/resources/public/views/record-view.html
+++ b/src/main/resources/public/views/record-view.html
@@ -22,7 +22,7 @@
       </tr>
       <tr>
           <td>Condition</td>
-          <td>{{record.condition}}</td>
+          <td>{{conditions[record.condition - 1].name}}</td>
       </tr>
       <tr>
           <td>Price</td>
