--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -47,7 +47,11 @@
 <div class="form-group">
     <label for="condition" class="col-sm-2 control-label">Condition</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="record.condition" class="form-control" id="condition" placeholder="Album condition" />
+        <!-- <input type="text" ng-model="record.condition" class="form-control" id="condition" placeholder="Album condition" /> -->
+        <select ng-model="record.condition">
+        	<option value="">Select Condition</option>
+        	<option ng-repeat="condition in conditions" value="{{condition.id}}">{{condition.name}}</option>
+        </select>        
     </div>
 </div>
 <div class="form-group">
