--- a/src/main/resources/public/views/record-edit.html
+++ b/src/main/resources/public/views/record-edit.html
@@ -1,5 +1,5 @@
 <div class="container pad-top">
-  <form name="userForm" class="form-horizontal" role="form" ng-submit="updateRecord()">
+  <form name="userForm" class="form-horizontal" role="form" ng-submit="updateRecord()" novalidate>
       <div ng-include="'views/_form.html'"></div>
   </form>
 </div>
