--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -34,24 +34,30 @@
         </div>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group" ng-class="{ 'has-error': userForm.genre.$touched && userForm.genre.$invalid }">
     <label for="genre" class="col-sm-2 control-label">Genre</label>
     <div class="col-sm-10">
         <!-- <input type="text" ng-model="record.genre" class="form-control" id="genre" placeholder="Genre" /> -->
-        <select ng-model="record.genre">
+        <select ng-model="record.genre" id="genre" name="genre" required>
         	<option value="">Select Genre</option>
         	<option ng-repeat="genre in genres" value="{{genre.id}}">{{genre.name}}</option>
         </select>
+        <div class="help-block" ng-messages="userForm.genre.$error" ng-show="userForm.genre.$touched">
+            <p ng-message="required">This field is required</p>
+        </div>        
     </div>
 </div>
-<div class="form-group">
+<div class="form-group" ng-class="{ 'has-error': userForm.condition.$touched && userForm.condition.$invalid }">
     <label for="condition" class="col-sm-2 control-label">Condition</label>
     <div class="col-sm-10">
         <!-- <input type="text" ng-model="record.condition" class="form-control" id="condition" placeholder="Album condition" /> -->
-        <select ng-model="record.condition">
+        <select ng-model="record.condition" id="condition" name="condition" required>
         	<option value="">Select Condition</option>
         	<option ng-repeat="condition in conditions" value="{{condition.id}}">{{condition.name}}</option>
-        </select>        
+        </select> 
+        <div class="help-block" ng-messages="userForm.condition.$error" ng-show="userForm.condition.$touched">
+            <p ng-message="required">This field is required</p>
+        </div>                 
     </div>
 </div>
 <div class="form-group" ng-class="{ 'has-error': userForm.price.$touched && userForm.price.$invalid }">
