--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -84,6 +84,15 @@
         </div>
     </div>
 </div>
+</div>
+<div class="form-group">
+    <label for="image" class="col-sm-2 control-label">Record image</label>
+    <div class="col-sm-10">
+	    <label class="btn btn-default btn-file">
+	        Browse <input type="file" file-model="record.image" id="image" name="image" style="display: none;">
+	    </label>   
+    </div> 
+</div>
 <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
         <input type="submit" class="btn btn-primary" value="Save" ng-disabled="userForm.$invalid"/>
