--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -86,10 +86,10 @@
 </div>
 </div>
 <div class="form-group">
-    <label for="image" class="col-sm-2 control-label">Record image</label>
+    <label for="cover" class="col-sm-2 control-label">Album cover</label>
     <div class="col-sm-10">
 	    <label class="btn btn-default btn-file">
-	        Browse <input type="file" file-model="record.image" id="image" name="image" style="display: none;">
+	        Browse <input type="file" file-model="record.cover" id="cover" name="cover" style="display: none;">
 	    </label>   
     </div> 
 </div>
