--- a/src/main/resources/public/views/record-view.html
+++ b/src/main/resources/public/views/record-view.html
@@ -34,7 +34,7 @@
       </tr>
       <tr ng-if="record.cover">
           <td>Album cover</td>
-          <td><img ng-src="/images/{{record.id}}/{{record.cover}}"/></td>
+          <td><img ng-src="/img/{{record.id}}/{{record.cover}}"/></td>
       </tr>             
   </table>
   <div>
